[package]
name = "pjp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coreaudio-rs = "0.11.2"
directories = "5.0.1"
env_logger = "0.10.0"
log = "0.4.19"
md5 = "0.7.0"
reqwest = {version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.171", features = ["derive", "rc"] }
serde_json = "1.0.102"
symphonia = { version = "0.5.3", features = ["all"] }
symphonia-metadata = "0.5.3"
